# Lumina-Note

./: .gitignore  AGENTLOOP_COMPARISON.md  README.en.md  README.ja.md  README.md  RELEASE_NOTES.md  index.html  package-lock.json  package.json  roocode.md  tailwind.config.js  侧边栏样式修改参考.md
.github/workflows/: release.yml
docs/: AGENT_DEVELOPMENT.md  AGENT_LIVE_PREVIEW.md  AGENT_PLANNER_ROADMAP.md  PDF_SUPPORT_DESIGN.md  ROADMAP.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/fs/: manager.rs  mod.rs  watcher.rs
src/agent/: index.ts  types.ts
src/agent/core/: AgentLoop.ts  MessageParser.ts  StateManager.ts  index.ts
src/agent/modes/: index.ts
src/agent/prompts/: PromptBuilder.ts
src/agent/providers/: index.ts
src/agent/tools/: ToolRegistry.ts  index.ts
src/components/: AIFloatingPanel.tsx  AgentPanel.tsx  ChatInput.tsx  CommandPalette.tsx  ContextMenu.tsx  ConversationList.tsx  DiffView.tsx  GlobalSearch.tsx  KnowledgeGraph.tsx  ResizeHandle.tsx  Ribbon.tsx  RightPanel.tsx  SelectionToolbar.tsx  SettingsModal.tsx  Sidebar.tsx  TabBar.tsx  VideoNoteView.tsx
src/components/ai/: AIFloatingBall.tsx  AIFloatingPanel.tsx  AISettingsModal.tsx  VoiceInputBall.tsx  useSpeechToText.ts
src/components/browser/: BrowserView.tsx
src/components/chat/: AgentMessageRenderer.tsx  AgentPanel.tsx  ChatInput.tsx  ChatPanel.tsx  ConversationList.tsx
src/components/database/: DatabaseSplitView.tsx  DatabaseView.tsx  TableView.tsx  index.ts
src/components/effects/: DiffView.tsx  KnowledgeGraph.tsx  LiquidGlassEffect.tsx
src/components/flashcard/: DeckList.tsx
src/components/layout/: MainAIChatShell.tsx  Ribbon.tsx  RightPanel.tsx  SettingsModal.tsx  Sidebar.tsx  SplitEditor.tsx  TabBar.tsx  TitleBar.tsx
src/editor/: CodeMirrorEditor.tsx  CodeMirrorEditor.tsx.backup  Editor.tsx  LivePreview.tsx  ReadingView.tsx
src/lib/: ai.ts  frontmatter.ts  markdown.ts  path.ts  tauri.ts  utils.ts
src/stores/: useAIStore.ts  useAgentStore.ts  useDatabaseStore.ts  useEditorStore.ts  useFileStore.ts  useFlashcardStore.ts  useLocaleStore.ts  usePDFStore.ts  useSplitStore.ts  useUIStore.ts
src/styles/: globals.css
src/types/: database.ts  pdf.ts  turndown.d.ts
(+50 files in other folders)
