[package]
name = "neurone"
version = "0.1.0"
description = "A local-first AI-powered note-taking app"
authors = ["Neurone Team"]
edition = "2021"

[lib]
name = "neurone_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-dialog = "2.0.0"
tauri-plugin-fs = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
notify = "6.1"
walkdir = "2.5"
thiserror = "2.0"

# Phase 3: RAG (uncomment when ready)
# tantivy = "0.22"
# lancedb = "0.13"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
