[package]
name = "lumina-note"
version = "0.3.4"
description = "A local-first AI-powered note-taking app"
authors = ["Lumina Note Contributors"]
edition = "2021"

[lib]
name = "lumina_note_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [ "unstable", "test"] }
tauri-plugin-dialog = "2.0.0"
tauri-plugin-fs = "2.0.0"
tauri-plugin-shell = "2.0.0"
tauri-plugin-os = "2.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
notify = "6.1"
walkdir = "2.5"
thiserror = "2.0"
trash = "5"
base64 = "0.22"

# CEF Integration (Chromium Embedded Framework)
# Note: CEF requires Ninja build tool to compile
# Install Ninja first: choco install ninja (Windows) or brew install ninja (macOS)
# Then run: cargo build --release
# 
# For now, we use placeholder implementation that will be replaced with real CEF
# when Ninja is available. The CEF commands are already defined in src-tauri/src/cef/

# RAG / Vector Storage
rusqlite = { version = "0.32", features = ["bundled"] }
bincode = "1.3"

# HTTP client for Bilibili API & LLM streaming
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
flate2 = "1.0"
chrono = "0.4"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
